--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@fontsource/noto-sans-jp": "^4.5.12"
     }
 }
