--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@fullhuman/postcss-purgecss": "^5.0.0",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/inertia": "^0.11.0",
         "@inertiajs/inertia-react": "^0.8.1",
@@ -22,7 +23,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-compression": "^0.5.1"
     },
     "dependencies": {
         "@fontsource/noto-sans-jp": "^4.5.12"
